--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,5 @@ base64 = "0.21.0"
 whoami = "1.4.0"
 sha256 = "1.1.2"
 winit = "0.28.3"
-winapi = { version = "0.3", features = ["debugapi"]}
 obfstr = "0.3"
-windows-sys = "0.48.0"
-
-
+windows-sys = {version = "0.48.0", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"]}
